tests/baselines/reference/importTypeWithUnparenthesizedGenericFunctionParsed.errors.txt
tests/cases/compiler/importTypeWithUnparenthesizedGenericFunctionParsed.ts(1,36): error TS2307: Cannot find module 'module' or its corresponding type declarations.


==== tests/cases/compiler/importTypeWithUnparenthesizedGenericFunctionParsed.ts (1 errors) ====
    export declare const fail1: import("module").Modifier<<T>(x: T) => T>; // shouldn't be a parse error
                                       ~~~~~~~~
!!! error TS2307: Cannot find module 'module' or its corresponding type declarations.